frontend/src/App.css
html {
  margin: 0;
  padding: 0;
  background-color: rgb(70, 99, 155);
  color: black;
}

body {
  margin: 0;
  padding: 0;
  font-family: 'Open Sans', sans-serif;
}

.navbar {
  position: fixed;
  width: 100%;
  background-color: rgb(19, 46, 102);
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  font-size: 1.25rem;
}

.navbar a{
  text-decoration: none;
  color: black;
  padding: 16px;
  display: block;
  text-shadow: 0 0 4px whitesmoke;
}

.navbar a:hover {
  background-color: aliceblue;
}

.right-links {
  display: none;
}

#push-content-down {
  height: 81px
}

.weather {
  border-style: solid;
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-around;
  margin: 0 16px
}

.weather p{
  margin: 16px
}

.clock {
  display: flex;
  order:1;
  align-self:center;
  flex-direction: column;
  text-align: center;
}

.time {
  font-size: 48px;
}

.forecast {
  order: 1
}

.temperature {
  align-self: center;
}

@media (max-width: 456px) {
  .weather {
    border-style: solid;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-around;
    margin: 0 16px
  }
  .clock {
    order:0;
  }
}

.news-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  grid-template-columns: 2fr 6fr;
  padding: 8px 8px;
}

.articles-container {
  display: flex;
  flex-direction: column;
  max-width: 130ch;
}

.posts-container {
  max-width: 40ch
}

.headline {
  margin-top: 0;
}

.posts-YC {
  border-style: solid;
  padding: 16px;
  background-color: rgb(155, 107, 44);
  margin: 8px;
  max-width: 30ch;
}

.articles-AP {
  background-color: rgb(60, 126, 82);
  border-style: solid;
  margin: 8px;
  padding: 4px 8px 0px;
  max-width: 60ch
}

@media (max-width: 932px) {
  .right-links {
    display:flex
  }
}

